--- a/P009193.opf/meta.yml
+++ b/P009193.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009193
+id: P009193
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG25353
   title: བསྟོད་སྨོན་ཕྱོགས་བསྒྲིགས།
-  volume: ''
   author: ''
+  volumes: {}
