--- a/P009193.opf/meta.yml
+++ b/P009193.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG25353
   title: བསྟོད་སྨོན་ཕྱོགས་བསྒྲིགས།
   author: ''
-  volumes: {}
+  volumes:
+    194184d8b25445aa986c593603a05433:
+      image_group_id: I1KG25355
+      title: ''
+      volume_number: 1
+      total_pages: 422
