--- a/P009193.opf/layers/v001/Pagination.yml
+++ b/P009193.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: f1a93088eee443288cac12cde1fbcff9
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7d18cc247d2a4448887093b93d376b32:
