--- a/P009193.opf/meta.yml
+++ b/P009193.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009193
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG25353
   title: བསྟོད་སྨོན་ཕྱོགས་བསྒྲིགས།
